Add structured log body schema and discipline rules
Logs were degrading into one-sentence prose entries (e.g. 'built image,
smoke passed, not pushed'), which are unreproducible weeks later.
Re-introduce the structured Markdown body style used by early Codex
sessions (Context / Operations / Verification / Decisions sections),
with length targets, absolute-path requirement, explicit failure
visibility, and proper files-field JSON-array discipline.

- SKILL.md: new 'Log Entry Body Schema' section with required structure,
  length targets, files-field rules, and good/bad examples.
- references/startup-and-write-rules.md: new 'Log Body Discipline'
  section summarizing reproducibility / failure visibility / continuity
  principles and length guidance.